# Word2Vec-PyCUDA

./: .gitignore  README.md  colab_setup.py  data_handler.py  evaluation.py  pyproject.toml  requirements.txt  run_all.py  setup_numba_cuda.py  visualization.py  w2v_cbow.py  w2v_common.py  w2v_skipgram.py
Notebook/: W2V_Notebook_Final.ipynb  W2V_Notebook_Optimized.ipynb  colab_setup_all.py  data_handler_large.py  run_all_notebook.py  w2v_notebook_v1.py
Result/: GRAPH1_EXPLANATION.md  README_COMPARISON.md  W2V_Notebook_v1.ipynb  compare_HS_vs_NS.py  compare_similarity.py
Result/HS/: HS_results_long.csv  HS_results_wide.csv  HS_similarity_by_word.csv  HS_similarity_long.csv  HS_similarity_matrix.csv  README.md  README_SIMILARITY.md  parse_results.py  parse_similarity.py
Result/NS/: NS_results_long.csv  NS_results_wide.csv  NS_similarity_by_word.csv  NS_similarity_long.csv  NS_similarity_matrix.csv  README.md  parse_results.py  parse_similarity.py
tests/: test_cbow.py  test_common.py  test_skipgram.py
